# Sertonius

./: .gitmodules  CMakeLists.txt  imgui.ini  main.cpp
content/meshes/: axis.fbx
shaders/: common.glsl  comp.comp.glsl  geom.frag.glsl  geom.vert.glsl  light.frag.glsl  light.vert.glsl
sources/: application.cpp  application.hpp  main.cpp
sources/components/: camera_component.cpp  camera_component.hpp  mesh_component.cpp  mesh_component.hpp  point_light_component.hpp
sources/core/: gen.hpp  log.cpp  log.hpp  reusable_object_pool.hpp  transform.cpp  transform.hpp
sources/engine/: editor_engine.cpp  editor_engine.hpp  engine.cpp  engine.hpp  game_engine.cpp  game_engine.hpp
sources/framework/: actor.cpp  actor.hpp  actor_component.cpp  actor_component.hpp  actor_loader.cpp  actor_loader.hpp  assets_manager.cpp  assets_manager.hpp  game_mode.hpp  object.cpp  object.hpp  pawn.cpp  pawn.hpp  weak_actor_ptr.hpp  world.cpp  world.hpp
sources/render/: camera.cpp  camera.hpp  common.cpp  common.hpp  hot_reloader.cpp  hot_reloader.hpp  lights.hpp  material.hpp  mesh.cpp  mesh.hpp  render_targets.cpp  render_targets.hpp  renderer.cpp  renderer.hpp  renderer3d.cpp  renderer3d.hpp  scene.cpp  scene.hpp  uniform_buffer.hpp
sources/render/passes/: composite_pass.cpp  composite_pass.hpp  geometry_pass.cpp  geometry_pass.hpp  lighting_pass.cpp  lighting_pass.hpp
sources/sertonius/: mesh_actor.hpp  player.cpp  player.hpp  point_light_actor.hpp  sertonius_game_mode.cpp  sertonius_game_mode.hpp
